# offload

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  compile.sh  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: build-release-asset.yml  ci.yml  release-please.yml
data/: offload.icns  report_template.html
offload/: __init__.py  app.py  cli.py  gui.py  styles.py  utils.py  verify.py
offloader/: app.py  gui.py  utils.py
tests/: benchmark_copy.py  test_app.py  test_gui.py  test_utils.py
